removed old frontend folder

--- a/antsystems-frontend/src/app/apps/purchase/carriers/carriers.component.html
+++ b/antsystems-frontend/src/app/apps/purchase/carriers/carriers.component.html
@@ -18,6 +18,25 @@
                 [sorting]="sorting" 
                 [verticalGrid]="false"
                 [horizontalGrid]="true">
+                <gui-grid-column [cellEditing]="false" [sorting]="false" width="60" >
+                    <ng-template let-value="value" let-item="item">
+            
+                        <button mat-icon-button [matMenuTriggerFor]="menu">
+                            <mat-icon>more_vert</mat-icon>
+                        </button>
+                        <mat-menu #menu="matMenu">
+                            <button mat-menu-item (click)="edit()">
+                                <mat-icon>edit</mat-icon>
+                                <span>Edit</span>
+                            </button>
+                            <button mat-menu-item (click)="delete()">
+                                <mat-icon>delete</mat-icon>
+                                <span>Remove</span>
+                            </button>
+                        </mat-menu>
+            
+                    </ng-template>
+                </gui-grid-column>
             </gui-grid>
         </div>
     </div>
