--- a/antsystems-frontend/src/app/apps/purchase/carriers/add-carrier/add-carrier.component.html
+++ b/antsystems-frontend/src/app/apps/purchase/carriers/add-carrier/add-carrier.component.html
@@ -12,22 +12,6 @@
                         placeholder="">
                 </div>
                 <div class="mt-3">
-                    <label for="service_type"
-                        class="block text-xxs font-medium text-gray-900 dark:text-white">Type of Service</label>
-                    <input formControlName="serviceType" type="text" id="service_type"
-                        class="ant-input"
-                        placeholder="">
-                </div>
-                <div class="mt-3">
-                    <label for="email"
-                        class="block text-xxs font-medium text-gray-900 dark:text-white">Email</label>
-                    <input formControlName="email" type="email" id="email"
-                        class="ant-input"
-                        placeholder="">
-                </div>
-            </div>
-            <div class="w-full">
-                <div class="mt-3">
                     <label for="company_name"
                         class="block text-xxs font-medium text-gray-900 dark:text-white">Company Name</label>
                     <input formControlName="companyName" type="text" id="company_name"
@@ -42,9 +26,88 @@
                         placeholder="">
                 </div>
                 <div class="mt-3">
+                    <label for="service_type"
+                        class="block text-xxs font-medium text-gray-900 dark:text-white">Type of Service</label>
+                    <input formControlName="serviceType" type="text" id="service_type"
+                        class="ant-input"
+                        placeholder="">
+                </div>
+                <!-- <div class="mt-3">
                     <label for="phone"
                         class="block text-xxs font-medium text-gray-900 dark:text-white">Phone</label>
                     <input formControlName="phone" type="phone" id="phone"
+                        class="ant-input"
+                        placeholder="">
+                </div>
+                <div class="mt-3">
+                    <label for="email"
+                        class="block text-xxs font-medium text-gray-900 dark:text-white">Email</label>
+                    <input formControlName="email" type="email" id="email"
+                        class="ant-input"
+                        placeholder="">
+                </div> -->
+            </div>
+            <div class="w-full">
+                <form formGroupName="address">
+                    <div class="mt-3">
+                        <label for="street"
+                            class="block text-xxs font-medium text-gray-900 dark:text-white">Street</label>
+                        <input formControlName="street" type="text" id="street"
+                            class="ant-input"
+                            placeholder="">
+                    </div>
+                    <a *ngIf="!showStreet2" (click)="showStreet2 = true" class="cursor-pointer text-blue-500 text-xs">
+                        + Address 2 (Optional)
+                    </a>
+                    <div class="mt-3" *ngIf="showStreet2">
+                        <!-- <label for="contact_name"
+                            class="block text-xxs font-medium text-gray-900 dark:text-white">Contact Name</label> -->
+                        <input formControlName="street2" type="text" id="street2"
+                            class="ant-input"
+                            placeholder="">
+                    </div>
+                    <div [ngClass]="showStreet2 ? 'mt-3' : ''">
+                        <label for="city"
+                            class="block text-xxs font-medium text-gray-900 dark:text-white">City</label>
+                        <input formControlName="city" type="phone" id="city"
+                            class="ant-input"
+                            placeholder="">
+                    </div>
+                    <div class="flex flex-row gap-4">
+                        <div class="mt-3 w-full">
+                            <label for="state"
+                                class="block text-xxs font-medium text-gray-900 dark:text-white">State</label>
+                            <select formControlName="state" type="phone" id="state"
+                                class="ant-input"
+                                placeholder="">
+                                <option value="CA">CA</option>
+                                <option value="NV">NV</option>
+                                <option value="AZ">AZ</option>
+                                <option value="UT">UT</option>
+                                <option value="NM">NM</option>
+                                <option value="TX">TX</option>
+                            </select>
+                        </div>
+                        <div class="mt-3 w-full">
+                            <label for="zip"
+                                class="block text-xxs font-medium text-gray-900 dark:text-white">Zip</label>
+                            <input formControlName="zip" type="phone" id="zip"
+                                class="ant-input"
+                                placeholder="">
+                        </div>
+                    </div>
+                </form>
+                <div class="mt-3">
+                    <label for="phone"
+                        class="block text-xxs font-medium text-gray-900 dark:text-white">Phone</label>
+                    <input formControlName="phone" type="phone" id="phone"
+                        class="ant-input"
+                        placeholder="">
+                </div>
+                <div class="mt-3">
+                    <label for="email"
+                        class="block text-xxs font-medium text-gray-900 dark:text-white">Email</label>
+                    <input formControlName="email" type="email" id="email"
                         class="ant-input"
                         placeholder="">
                 </div>
