--- a/antsystems-frontend/src/app/apps/purchase/carriers/add-carrier/add-carrier.component.html
+++ b/antsystems-frontend/src/app/apps/purchase/carriers/add-carrier/add-carrier.component.html
@@ -117,6 +117,12 @@
     <hr class="border-2 border-black mt-8">
     <div class="flex gap-2 justify-end">
         <button class="btn-cancel" (click)="close(false)">Cancel</button>
-        <button class="btn-primary" (click)="save()" [disabled]="!form.valid" [ngClass]="!form.valid ? 'btn-disabled' : ''">Save</button>
+        <button 
+            class="btn-primary" 
+            (click)="save()" 
+            [disabled]="!form.valid" 
+            [ngClass]="!form.valid ? 'btn-disabled' : ''">
+            {{  !props.id ? 'Save' : 'Update' }}
+        </button>
     </div>
 </div>
