--- a/antsystems-frontend/src/app/apps/purchase/carriers/carriers.component.html
+++ b/antsystems-frontend/src/app/apps/purchase/carriers/carriers.component.html
@@ -14,27 +14,56 @@
         <div class="mt-4">
             <gui-grid 
                 [source]="source" 
-                [columns]="columns" 
                 [sorting]="sorting" 
                 [verticalGrid]="false"
                 [horizontalGrid]="true">
-                <gui-grid-column [cellEditing]="false" [sorting]="false" width="60" >
+                <gui-grid-column header="Carrier ID" [field]="'carrierId'" type="string" view="text">
+                </gui-grid-column>
+                <gui-grid-column header="Company Name" [field]="'companyName'" type="string" view="text">
+                </gui-grid-column>
+                <gui-grid-column header="Address" [field]="'address'" type="string" view="text">
+                    <ng-template let-value="value" let-index="index" let-item="item">
+                        <span>{{value.street}}</span>
+                    </ng-template>
+                </gui-grid-column>
+                <gui-grid-column header="City" [field]="'address'" type="string" view="text">
+                    <ng-template let-value="value" let-index="index" let-item="item">
+                        <span>{{value.city}}</span>
+                    </ng-template>
+                </gui-grid-column>
+                <gui-grid-column header="State" [field]="'address'" type="string" view="text">
+                    <ng-template let-value="value" let-index="index" let-item="item">
+                        <span>{{value.state}}</span>
+                    </ng-template>
+                </gui-grid-column>
+                <gui-grid-column header="Zip Code" [field]="'address'" type="string" view="text">
+                    <ng-template let-value="value" let-index="index" let-item="item">
+                        <span>{{value.zip}}</span>
+                    </ng-template>
+                </gui-grid-column>
+                <gui-grid-column header="Contact" [field]="'contactName'" type="string" view="text">
+                </gui-grid-column>
+                <gui-grid-column header="Phone" [field]="'phone'" type="string" view="text">
+                </gui-grid-column>
+                <gui-grid-column header="Email" [field]="'email'" type="string" view="text">
+                </gui-grid-column>
+                <gui-grid-column header="Type Of Service" [field]="'serviceType'" type="string" view="text">
+                </gui-grid-column>
+                <gui-grid-column [cellEditing]="false" [sorting]="false" width="10" >
                     <ng-template let-value="value" let-item="item">
-            
                         <button mat-icon-button [matMenuTriggerFor]="menu">
-                            <mat-icon>more_vert</mat-icon>
+                            <mat-icon class="text-base">more_vert</mat-icon>
                         </button>
                         <mat-menu #menu="matMenu">
-                            <button mat-menu-item (click)="edit()">
+                            <button mat-menu-item (click)="edit(item)">
                                 <mat-icon>edit</mat-icon>
                                 <span>Edit</span>
                             </button>
-                            <button mat-menu-item (click)="delete()">
+                            <button mat-menu-item (click)="delete(item.id)">
                                 <mat-icon>delete</mat-icon>
-                                <span>Remove</span>
+                                <span>Delete</span>
                             </button>
                         </mat-menu>
-            
                     </ng-template>
                 </gui-grid-column>
             </gui-grid>
