--- a/antsystems-frontend/src/styles.scss
+++ b/antsystems-frontend/src/styles.scss
@@ -4,6 +4,8 @@
 
 @import url('https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i,900,900i');
 
+@import "https://fonts.googleapis.com/icon?family=Material+Icons";
+
 // Font Awesome
 @import "@fortawesome/fontawesome-free/scss/fontawesome.scss";
 @import "@fortawesome/fontawesome-free/scss/solid.scss";
@@ -12,6 +14,8 @@
 
 // MDB SCSS
 @import "mdb-angular-ui-kit/assets/scss/mdb.scss";
+
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
 
 * {
   box-sizing: border-box;
