--- a/antsystems-frontend/src/app/apps/purchase/purchase-orders/new-purchase-order/new-purchase-order.component.html
+++ b/antsystems-frontend/src/app/apps/purchase/purchase-orders/new-purchase-order/new-purchase-order.component.html
@@ -53,7 +53,9 @@
                     class=""
                     placeHolder=""
                     [options]="shipTo"
+                    feild="companyName"
                     [control]="form.get('shipTo')"
+                    (selectedItemEvent)="setCarrier($event)"
                     >
                 </ant-dropdown>
             </div>
