--- a/antsystems-frontend/src/app/apps/purchase/purchase-orders/new-purchase-order/new-purchase-order.component.html
+++ b/antsystems-frontend/src/app/apps/purchase/purchase-orders/new-purchase-order/new-purchase-order.component.html
@@ -16,7 +16,7 @@
                 </div>
             </div>
         </div>
-        <div class="w-1/4 m-4">
+        <div class="w-1/4 m-4" formGroupName="vendor">
             <div class="relative">
                 <label for="master_case"
                     class="block text-xxs font-medium text-gray-900 dark:text-white">Vendor</label>
@@ -25,7 +25,7 @@
                     placeHolder=""
                     [options]="vendors"
                     feild="companyName"
-                    [control]="form.get('vendor')"
+                    [control]="form.get('vendor.vendorName')"
                     (selectedItemEvent)="setVendor($event)"
                     >
                 </ant-dropdown>
@@ -45,7 +45,7 @@
                     >
             </div>
         </div>
-        <div class="w-1/4 m-4">
+        <div class="w-1/4 m-4" formGroupName="carrier">
             <div class="relative">
                 <label for="master_case"
                     class="block text-xxs font-medium text-gray-900 dark:text-white">Ship To</label>
@@ -54,7 +54,7 @@
                     placeHolder=""
                     [options]="shipTo"
                     feild="companyName"
-                    [control]="form.get('shipTo')"
+                    [control]="form.get('carrier.carrierName')"
                     (selectedItemEvent)="setCarrier($event)"
                     >
                 </ant-dropdown>
@@ -62,7 +62,7 @@
             <div class="mt-3">
                 <label for="master_case"
                     class="block text-xxs font-medium text-gray-900 dark:text-white">Ship Via</label>
-                <input formControlName="shipVia" type="text" id="master_case"
+                <input formControlName="serviceType" type="text" id="master_case"
                     class="ant-input"
                     placeholder="">
             </div>
@@ -116,7 +116,7 @@
     <div class="flex gap-x-16">
         <div class="w-2/3">
             <label for="message" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">Notes</label>
-            <textarea id="message" rows="4" class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="..."></textarea>
+            <textarea id="message" formControlName="notes" rows="4" class="block p-2.5 w-full text-sm text-gray-900 bg-gray-50 rounded-lg border border-gray-300 focus:ring-blue-500 focus:border-blue-500 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500" placeholder="..."></textarea>
         </div>
         <div class="w-1/3 mt-4">
             <ant-text label="Sub-Total" value="Text Value"></ant-text>
@@ -126,4 +126,5 @@
             <ant-text label="Total Amount" value="Text Value"></ant-text>
         </div>
     </div>
+    <button (click)="save()">Save</button>
 </form>
